# SpherePainting

./: .gitmodules  CMakeLists.txt  main.cpp
